# crabwatch

./: Cargo.toml  README.md  zizmor-default.yml
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  crabwatch.yml
src/: clone.rs  github.rs  main.rs  scan.rs
src/command/: analyze.rs
