[package]
name = "crabwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.13", features = ["json", "rustls", "webpki-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1.48.0"

